fix(user-notifications): Fix Hnipp name tag padding (#15106)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/libs/email-service/src/tools/design/styles.hbs
+++ b/libs/email-service/src/tools/design/styles.hbs
@@ -292,12 +292,15 @@
  * Tag partial
  */
   .tag {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    align-content: center;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     height: 32px;
     margin: 48px 0 24px 0;
     width: fit-content;
-    align-content: center;
     padding-left: 8px;
     padding-right: 8px;
     border-radius: 8px;
@@ -305,7 +308,6 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 1.5;
-    text-align: center;
     color: #0061FF;
     background-color: #F2F7FF;
   }
